sandbox/output
StringCalculatorTest.java:9: error: cannot find symbol
        int actual = Hiker.add("");
                     ^
  symbol:   variable Hiker
  location: class StringCalculatorTest
StringCalculatorTest.java:16: error: cannot find symbol
        int actual = Hiker.add("1");
                     ^
  symbol:   variable Hiker
  location: class StringCalculatorTest
StringCalculatorTest.java:23: error: cannot find symbol
        int actual = Hiker.add("1,2");
                     ^
  symbol:   variable Hiker
  location: class StringCalculatorTest
3 errors
